examples/test/testpolicy6734.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6734
  namespace: namespace118
spec:
  podSelector:
    matchLabels:
      key27: value45
      key29: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value49
          key19: value7
          key39: value40
      podSelector:
        matchLabels:
          key33: value41
          key36: value7
          key41: value36
